# build-system

./: CMakeLists.txt  syntax.txt
src/: AST.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Memory.cpp  Memory.h  Parser.cpp  Parser.h  SymbolTable.cpp  SymbolTable.h  args_parser.cpp  args_parser.h  constants.cpp  constants.h  main.cpp  token.h  values.h
test_dir/: script.bm
